<?xml version="1.0"?>
<package format="2">
  <name>stamped_msgs</name>

  <version>1.0.1</version>

  <description>std_msgs with headers (timestamps).</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>TRADR</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
